0025808: Visualization - Initialization of Prs3d_PointAspect by custom Graphic3d_AspectMarker3d

the constructor accepting the Graphic3d_AspectMarker3d is implemented

constructor with graphic3d aspect and SetAspect() method are implemented for other aspect classes

patch for non-initialized class fields